# spayd-rs

./: Cargo.toml
examples/: basic.rs  qrcode.rs  unvalidated.rs
src/: lib.rs  spayd.rs
