[package]
name = "spayd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iso-4217 = "0.1.0"
qrcode = { version = "0.12.0", optional = true }
regex = "1.8.1"
typed-builder = "0.14.0"

[features]
qrcode = ["dep:qrcode"]
